# minspan

./: .gitignore  README.md  REPRODUCE.md  pyproject.toml
baselines/commandsans/: README.md  pyproject.toml
baselines/commandsans/commandsans/: __init__.py  annotate.py  data.py  sanitize.py  train.py
baselines/commandsans/scripts/: prepare_data.py
benchmarks/agentdyn/: .gitignore  README.md  pyproject.toml
benchmarks/piarena/: README.md  main.py  main_agentdojo.py  main_injecagent.py  main_search.py
data/: README.md  split_manifest.json  stats.json
docs/: HISTORY.md
figures/: README.md
figures/src/: agentdyn_scatter.csv  fig_latency.py  fig_method.py  fig_perdataset.py  (+3 more)
minspan/: __init__.py  augment.py  build_training_data.py  data_generation.py  data_schema.py  data_stats.py  evaluate.py  evaluate_matrix.py  make_clean_dataset.py  metrics.py  modeling.py  nemotron_to_minspan.py  postprocess.py  prompting.py  token_labels.py  train.py  training_data.py
results/: README.md  ablations.csv  ablations_agent.csv  ablations_ood.csv  adaptive_attack.csv  agentdyn_main.csv  agentdyn_pairs.csv  contamination_audit.csv  deepseek_table.csv  defense_ops.csv  latency_breakdown.csv  local_token_eval.csv  paired_costs.csv  piarena_main.csv  piarena_table.csv  training_data_summary.csv
scripts/: collect_agentdyn.py  collect_piarena.py  contamination_audit.py  download_checkpoint.sh  eval_ablations.py  eval_agentdyn.sh  eval_piarena.sh  make_ablation_data.py  run_ablations.sh  run_adaptive_attack.sh  summarize_ablations_agent.py  summarize_adaptive.py  train.sh
(+119 files in other folders)
