[project]
name = "minspan"
version = "0.1.0"
description = "MinSpan: task-conditioned minimal-span filtering for LLM agent tool outputs"
requires-python = ">=3.11"
dependencies = [
    "torch==2.8.0",
    "transformers==4.57.1",
    "safetensors==0.6.2",
    "tokenizers==0.22.1",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["minspan"]
